--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
 
 }
 
+body {
+    background-color: black;
+}
+
 .container {
     color: white;
     width: 100%;
-    height: 1000px;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,4 +94,21 @@ header {
     border: 1px solid white;
 }
 
-.cadastrado {}
+.cadastrado {
+    margin: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cadastrado button {
+    /* background-color: red; */
+    border: 2px solid red;
+    padding: 10px;
+    border-radius: 10px;
+    margin-left: 15px;
+}
+
+.material-symbols-outlined {
+    /* background-color: red; */
+    color: red;
+}
