--- a/style.css
+++ b/style.css
@@ -7,18 +7,20 @@
 }
 
 body {
+    display: flex;
+    justify-content: center;
     background-color: black;
 }
 
 .container {
     color: white;
     width: 100%;
-    height: 500px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid black;
-    background-color: black;
+
 }
 
 header {
